# bankr-bot-tutorial

./: .npmignore  BANKR_INTEGRATION.md  Cargo.toml  HOW_IT_WORKS.md  NPM_PUBLISHING_GUIDE.md  README.md  VERIFICATION.md  package-lock.json  package-minimal.json  package.json
crates/bankr-analytics/: Cargo.toml
crates/bankr-analytics/src/: lib.rs
crates/bankr-crypto/: Cargo.toml  package.json
crates/bankr-crypto/src/: lib.rs
crates/bankr-trading/: Cargo.toml
crates/bankr-trading/src/: lib.rs
templates/analytics-dashboard/: README.md  package.json
templates/analytics-dashboard/shared/: enhanced-config.ts
templates/analytics-dashboard/src/: config.ts  nft-marketplace.ts
templates/arbitrage-bot/: package.json
templates/arbitrage-bot/src/: index-rust.js  index.js
templates/cross-chain-bridge/: README.md  package.json
templates/defi-bank/: README.md  package.json
templates/defi-bank/src/: index.ts
templates/defi-yield-farm/: README.md  package.json
templates/gamefi-platform/: README.md  package.json
templates/nft-marketplace/: README.md  package.json
templates/nft-marketplace/src/: nft-marketplace.js
templates/nft-marketplace/tutorials/: start.js
templates/portfolio-tracker/: package.json
templates/shared/: auth-helpers.ts  cli-helpers.js  enhanced-config.js
templates/token-launcher/: package.json
templates/token-launcher/src/: index.js
templates/trading-bot/: package.json
templates/trading-bot/shared/: types.ts
templates/trading-bot/src/: config.ts  index.js  trading-bot-rust.js  trading-bot.js
test/: cli.test.js
