[workspace]
members = [
    "crates/bankr-crypto",
    "crates/bankr-trading", 
    "crates/bankr-analytics",
    "crates/bankr-wasm"
]
resolver = "2"

[workspace.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
