[package]
name = "bankr-rust-analytics"
version = "1.0.0"
edition = "2021"
description = "High-performance analytics engine for Bankr"
license = "MIT"
authors = ["Bankr Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
