[package]
name = "bankr-rust-crypto"
version = "1.0.0"
edition = "2021"
description = "High-performance cryptographic operations for Bankr"
license = "MIT"
authors = ["Bankr Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
