[package]
name = "bankr-rust-trading"
version = "1.0.0"
edition = "2021"
description = "High-performance trading engine for Bankr"
license = "MIT"
authors = ["Bankr Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
ed25519-dalek = "2.0"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
